--- a/Nuages.Identity.UI/Pages/Account/ConfirmEmailChange.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ConfirmEmailChange.cshtml
@@ -4,5 +4,12 @@
     ViewData["Title"] = "Confirm email change";
 }
 
-<h1>@ViewData["Title"]</h1>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
+
+@if (Model.Success)
+{
+    <span>ok</span>
+}
+else
+{
+    <span>error</span>
+}
