--- a/Nuages.Identity.UI/Pages/Shared/_LayoutSettings.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_LayoutSettings.cshtml
@@ -24,7 +24,7 @@
                <ul class="list-disc">
                    <li> <a href="~/account/logout">@Localizer["logout:title"]</a></li>
                    <li> <a href="~/account/manage/changePassword">@Localizer["changePassword:title"]</a></li>
-                   <li> <a href="~/account/manage/changeEmail">@Localizer["changeEmail:title"]</a></li>
+                   <li> <a href="~/account/manage/email">@Localizer["changeEmail:title"]</a></li>
                    <li> <a href="~/account/manage/changeUsername">@Localizer["changeUsername:title"]</a></li>
                    <li> <a href="~/account/manage/mfa">@Localizer["mfa:title"]</a></li>
                    <li> <a href="~/account/manage/profile">@Localizer["profile:title"]</a></li>
