--- a/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
@@ -26,7 +26,7 @@
                    <li> <a href="~/account/manage/changePassword">@Localizer["changePassword:title"]</a></li>
                    <li> <a href="~/account/manage/email">@Localizer["changeEmail:title"]</a></li>
                    <li> <a href="~/account/manage/username">@Localizer["changeUsername:title"]</a></li>
-                   <li> <a href="~/account/manage/mfa">@Localizer["mfa:title"]</a></li>
+                   <li> <a href="~/account/manage/twoFactorAuthentication">@Localizer["mfa:title"]</a></li>
                    <li> <a href="~/account/manage/profile">@Localizer["profile:title"]</a></li>
                </ul>
            </div>
