--- a/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
@@ -14,7 +14,7 @@
       <img class="mx-auto h-24" src="@ViewBag.LogoUrl" alt="Workflow">
     }
     
-    <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+    <h2 class="mt-6 page-header text-center ">
       @ViewBag.Title
     </h2>
   </div>
