--- a/Nuages.Identity.UI/Pages/Account/Login.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Login.cshtml
@@ -47,7 +47,7 @@
                 </a>
             </div>
         </div>
-        <button v-on:click.prevent="login" class="btn btn-primary">
+        <button v-on:click.prevent="login" class="primary full">
             @Localizer["login:connect"]
         </button>
     </form>
