--- a/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
@@ -21,7 +21,7 @@
         <input id="currentPassword" name="currentPassword" type="password" v-model="currentPassword" placeholder="@Localizer["changePassword:currentPassword"]" autocomplete="current-password" required class="text-box ">
         <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["changePassword:password"]" autocomplete="current-password" required class="text-box ">
         <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["changePassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
-        <button v-on:click.prevent="changePassword" class="btn btn-primary">
+        <button v-on:click.prevent="changePassword" class="primary full">
             @Localizer["changePassword:submit"]
         </button>
         <partial name="Shared/PasswordRequirements"/>
