--- a/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
@@ -27,7 +27,7 @@
         <partial name="Shared/ErrorList"/>
        
         <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["changeEmail:newEmail"]" required class="text-box">
-        <button v-on:click.prevent="changeEmail" class="btn btn-primary">
+        <button v-on:click.prevent="changeEmail" class="primary full">
             @Localizer["changeEmail:submit"]
         </button>
     </form>
