--- a/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
@@ -20,7 +20,7 @@
        
         <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["setPassword:password"]" autocomplete="current-password" required class="text-box ">
         <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["setPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
-        <button v-on:click.prevent="setPassword" class="btn btn-primary">
+        <button v-on:click.prevent="setPassword" class="primary full">
             @Localizer["setPassword:submit"]
         </button>
         <partial name="Shared/PasswordRequirements"/>
