--- a/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
@@ -26,7 +26,7 @@
         <partial name="Shared/ErrorList"/>
        
         <input id="username" name="username" type="text" autofocus="" v-model="username" placeholder="@Localizer["changeUsername:newUserName"]" required class="text-box">
-        <button v-on:click.prevent="changeUsername" class="btn btn-primary">
+        <button v-on:click.prevent="changeUsername" class="primary full">
             @Localizer["changeUsername:submit"]
         </button>
     </form>
