--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -21,7 +21,7 @@
     }
     <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
     <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["resetPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
-    <button v-on:click.prevent="resetPassword" class="btn btn-primary">
+    <button v-on:click.prevent="resetPassword" class="primary full">
         @ViewData["Submit"]
     </button>
     <partial name="Shared/PasswordRequirements"/>
