--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -18,7 +18,7 @@
     <span>@Localizer["forgotPassword:instructions"]</span>
     <partial name="Shared/ErrorList"/>
     <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box">
-    <button v-on:click.prevent="forgotPassword" class="btn btn-primary">
+    <button v-on:click.prevent="forgotPassword" class="primary full">
         @Localizer["forgotPassword:reset"]
     </button>
 </form>
