--- a/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
@@ -23,7 +23,7 @@
                 </label>
             </div>
         </div>
-        <button v-on:click.prevent="login" class="btn btn-primary">
+        <button v-on:click.prevent="login" class="primary full">
             @Localizer["login:connect"]
         </button>
     </form>
