--- a/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
@@ -18,7 +18,7 @@
     <span>@Localizer["passwordLess:instructions"]</span>
     <partial name="Shared/ErrorList"/>
     <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box">
-    <button v-on:click.prevent="sendPasswordlessInfo" class="btn btn-primary">
+    <button v-on:click.prevent="sendPasswordlessInfo" class="primary full">
         @Localizer["passwordLess:send"]
     </button>
 </form>
