--- a/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -6,13 +6,14 @@
 }
 
 <div id="app" class="flex flex-col space-y-6">
-    <h2 class="page-header">@Localizer["2fa.title"]</h2>
+  <h2 class="page-header">@Localizer["2fa.title"]</h2>
     
-    <span>@Localizer["2fa.instructions"]</span>
-    @if (Model.Is2FaEnabled)
+  <span>@Localizer["2fa.instructions"]</span>
+  
+  @if (Model.Is2FaEnabled)
     {
         <div>
-            <span>@Localizer["2fa.active"]</span>&nbsp;<a class="btn btn-primary">@Localizer["2fa.deactivate"]</a>
+            <span >@Localizer["2fa.active"]</span>&nbsp;<button type="button" class="danger" v-on:click="showDeactivate = true" >@Localizer["2fa.deactivate"]</button>
         </div>
         
         
@@ -27,10 +28,68 @@
     else
     {
         <div>
-            <span>@Localizer["2fa.inactive"]&nbsp;</span> <a>@Localizer["2fa.activate"]</a>
+            <span>@Localizer["2fa.inactive"]&nbsp;</span> <a href="~/Account/Manage/EnableAuthenticator" class="primary">@Localizer["2fa.activate"]</a>
         </div>
     }
    
+    <!-- This example requires Tailwind CSS v2.0+ -->
+    <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true" v-if="showDeactivate" v-show="showDeactivate" style="display: none">
+      <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+        <!--
+          Background overlay, show/hide based on modal state.
+    
+          Entering: "ease-out duration-300"
+            From: "opacity-0"
+            To: "opacity-100"
+          Leaving: "ease-in duration-200"
+            From: "opacity-100"
+            To: "opacity-0"
+        -->
+        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+    
+        <!-- This element is to trick the browser into centering the modal contents. -->
+        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+    
+        <!--
+          Modal panel, show/hide based on modal state.
+    
+          Entering: "ease-out duration-300"
+            From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+            To: "opacity-100 translate-y-0 sm:scale-100"
+          Leaving: "ease-in duration-200"
+            From: "opacity-100 translate-y-0 sm:scale-100"
+            To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+        -->
+        <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+          <div class="sm:flex sm:items-start">
+            <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+              <!-- Heroicon name: outline/exclamation -->
+              <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+              </svg>
+            </div>
+            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+              <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+                Deactivate account
+              </h3>
+              <div class="mt-2">
+                <p class="text-sm text-gray-500">
+                  Are you sure you want to deactivate your account? All of your data will be permanently removed from our servers forever. This action cannot be undone.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+            <button v-on:click="disable2Fa" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
+              Deactivate
+            </button>
+            <button  v-on:click="showDeactivate = false" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
+              Cancel
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
 
 @section Scripts {
