--- a/Nuages.Identity.UI/Pages/Account/SMSLogin.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/SMSLogin.cshtml
@@ -18,7 +18,7 @@
         <partial name="Shared/ErrorList"/>
         <input id="code" name="code" type="text" autofocus="" v-model="code" placeholder="Code" required class="text-box" autocomplete=“off”>
 
-        <button v-on:click.prevent="login" class="btn btn-primary">
+        <button v-on:click.prevent="login" class="primary full">
             @Localizer["loginSMS:connect"]
         </button>
     </form>
