--- a/Nuages.Identity.UI/wwwroot/css/tailwind.css
+++ b/Nuages.Identity.UI/wwwroot/css/tailwind.css
@@ -13,17 +13,26 @@
         @apply appearance-none block w-full px-3 py-2 border  border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500;
     }
     
-    .btn {
-        @apply w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2
+    button.full {
+        @apply w-full flex 
     }
     
-    .btn-primary
+    button.primary
     {
-        @apply text-white bg-indigo-600 hover:bg-indigo-700  focus:ring-indigo-500
+        @apply justify-center py-2 px-4 border border-transparent rounded-md shadow-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 text-white bg-indigo-600 hover:bg-indigo-700  focus:ring-indigo-500
+    }
+
+    button.danger
+    {
+        @apply justify-center py-2 px-4 border border-transparent rounded-md shadow-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 text-white bg-red-600 hover:bg-red-700  focus:ring-red-500
     }
     
     a {
         @apply font-medium text-indigo-600 hover:text-indigo-500
+    }
+
+    a.primary {
+        @apply justify-center py-2 px-4 border border-transparent rounded-md shadow-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 text-white bg-indigo-600 hover:bg-indigo-700  focus:ring-indigo-500  hover:text-white
     }
     
     .btn-simple
