--- a/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body class="w-full">
 
-<div class="min-h-screen flex flex-col justify-start sm:px-6 lg:px-8">
+<div class="min-h-screen flex flex-col justify-start sm:px-6 lg:px-8 max-w-xl">
     <div class="mt-8 ">
          
        
@@ -30,8 +30,7 @@
                    <li> <a href="~/account/manage/profile">@Localizer["profile:title"]</a></li>
                </ul>
            </div>
-           <div class="basis-1/2">@RenderBody()</div>
-           <div class="basis-1/4"></div>
+           <div >@RenderBody()</div>
        </div>
         
     </div>
