--- a/Nuages.Identity.UI/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -6,7 +6,7 @@
 
 <div class="space-y-4" id="app">
     
-    <div class="flex justify-center mt-6">
+    <div class="flex justify-center">
         <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
         <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
             <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
@@ -15,17 +15,7 @@
     
     <div v-if="status == ''" v-show="status == ''" >
          <div>To use an authenticator app go through the following steps:</div>
-            <div>
-                Download a two-factor authenticator app like
-        
-                <ul class="list-disc ml-4 mt-2">
-                    <li>Microsoft Authenticator</li>
-                    <li>Google Authenticator</li>
-                    <li>Authy</li>
-                    <li>LastPass Authenticator</li>
-                    <li>Duo Mobile</li>
-                </ul>
-            </div>
+            
             <div class="space-y-2">
                 <p>Scan the QR Code </p>
                 <div id="qrCode"></div>
@@ -54,6 +44,20 @@
   
 </div>
 
+@section RightNav
+{
+    <div>
+                    Download a two-factor authenticator app like
+            
+                    <ul class="list-disc ml-4 mt-2">
+                        <li>Microsoft Authenticator</li>
+                        <li>Google Authenticator</li>
+                        <li>Authy</li>
+                        <li>LastPass Authenticator</li>
+                        <li>Duo Mobile</li>
+                    </ul>
+                </div>
+}
 @section Scripts {
 
     <script>
