--- a/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div id="app">
-    <div class="flex justify-center mt-6">
+    <div class="flex justify-center">
         <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
         <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
             <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
@@ -14,7 +14,7 @@
         </div>
     </div>
     
-    <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="changePassword" id="formChangePassword" v-if="status != 'sending' && status != 'done'">
+    <form class="space-y-4" method="POST" v-on:submit.prevent="changePassword" id="formChangePassword" v-if="status != 'sending' && status != 'done'">
         <span>@Localizer["changePassword:instructions"]</span>
         <partial name="Shared/ErrorList"/>
        
