--- a/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = Localizer["changeUsername:title"];
 }
 
-<div id="app">
+<div id="app" >
 
-    <div class="flex justify-center mt-6">
+    <div class="flex justify-center">
         <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
         <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
             <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
@@ -16,7 +16,7 @@
     </div>
 
     
-    <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="changeUsername" id="formChangeUsername" v-if="status == ''">
+    <form class="space-y-4" method="POST" v-on:submit.prevent="changeUsername" id="formChangeUsername" v-if="status == ''">
         <span>@Localizer["changeUsername:instructions"]</span>
         <div>
             <strong>@Localizer["changeUsername:currentUsername"]</strong>&nbsp;
